Update to newer Central Publishing API. Publish 1.26.